// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewButton /> Should render and match the loading snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: auto;
  width: 30px;
  height: 30px;
}

.c1:after {
  content: ' ';
  display: block;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  border: 6px solid #FFFFFF;
  border-color: #FFFFFF transparent #FFFFFF transparent;
  -webkit-animation: hAjVGa 1.2s linear infinite;
  animation: hAjVGa 1.2s linear infinite;
}

.c0 {
  padding: 15px;
  height: 150px;
  box-shadow: 0px 4px 20px #E3EEFB;
  border-radius: 5px;
  margin-bottom: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #B727EA;
  color: #FFFFFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  data-cy="create-intervention-button"
>
  <div
    class="c1"
    color="#FFFFFF"
    size="30"
    width="6"
  />
</div>
`;

exports[`<NewButton /> Should render and match the snapshot 1`] = `
.c0 {
  padding: 15px;
  height: 150px;
  box-shadow: 0px 4px 20px #E3EEFB;
  border-radius: 5px;
  margin-bottom: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #B727EA;
  color: #FFFFFF;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: auto;
  height: auto;
  margin-bottom: 15px;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="c0"
  data-cy="create-intervention-button"
>
  <div
    class="c1"
    direction="column"
    display="flex"
  >
    <img
      alt="add"
      class="c2"
      src="IMAGE_MOCK"
    />
  </div>
</div>
`;
